# screentrack

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  bundle.sh
crates/capture/: Cargo.toml
crates/capture/src/: accessibility.rs  capture.rs  events.rs  frame_compare.rs  lib.rs  monitor.rs  ocr.rs
crates/daemon/: Cargo.toml  build.rs
crates/daemon/src/: auto_update.rs  benchmark.rs  client_push.rs  llmtest.rs  main.rs  md_attributed.rs  md_render.rs  menubar.rs  query.rs  scheduler.rs  server.rs  smartquery.rs  viewer.rs
crates/store/: Cargo.toml
crates/store/src/: lib.rs  queries.rs  schema.rs
crates/summarizer/: Cargo.toml
crates/summarizer/src/: client.rs  lib.rs  prompts.rs  tiers.rs
