[package]
name = "screentrack-capture"
version = "0.1.0"
edition = "2021"

[dependencies]
screentrack-store = { path = "../store" }
xcap = "0.9"
core-graphics = "0.24"
core-foundation = "0.10"
image = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
foreign-types-shared = "0.3"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", features = ["blocking", "json"] }
base64 = "0.22"
