[package]
name = "screentrack-summarizer"
version = "0.1.0"
edition = "2021"

[dependencies]
screentrack-store = { path = "../store" }
reqwest = { version = "0.12", features = ["json"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
